--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,7 +10,11 @@ on:
         required: false
         default: "latest"
         type: string
-
+      MLEnabled:
+        required: false
+        default: false
+        type: boolean
+        
     secrets:
       token:
         required: true
