--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,13 +7,13 @@ on:
         default: "all"
         type: string
       ComposerVersion:
-        required: true
-        default: "2.2"
-        type: string
-      MLEnabled:
         required: false
-        default: false
-        type: boolean
+        default: "latest"
+        type: string
+      ComposerArgs:
+        required: true
+        default: "install"
+        type: string
 
     secrets:
       token:
@@ -29,56 +29,28 @@ jobs:
   test:
     env:
       GITHUB_TOKEN: ${{ secrets.token }}
-      APPLY_FIXES: all
-      APPLY_FIXES_MODE: pull_request
-      APPLY_FIXES_EVENT: all
-
     runs-on: ["self-hosted"]
     timeout-minutes: 15
     steps:
       - name: Checkout
         uses: actions/checkout@v3.0.2
 
-      - name: run composer install 
-        if: inputs.language == 'php'
-        uses: docker://composer:${{ inputs.ComposerVersion }}
+      - name: run composer 
+        if: inputs.language == 'php' && inputs.ComposerVersion == "2.2"
+        uses: docker://composer:2.2
         with:
-          args: install
+          args: ${{ inputs.ComposerArgs }}
 
-      # - name: MegaLinter
-      #   if: inputs.MLEnabled
-      #   id: ml
-      #   uses: oxsecurity/megalinter@v6.11.1
-
-      # - name: Archive production artifacts
-      #   if: ( ${{ success() }} || ${{ failure() }} ) && inputs.MLEnabled 
-      #   uses: actions/upload-artifact@v2
-      #   with:
-      #     name: MegaLinter reports
-      #     path: |
-      #       megalinter-reports
-      #       mega-linter.log
-
-      # Create pull request if applicable (for now works only on PR from same repository, not from forks)
-      # - name: Create Pull Request with applied fixes
-      #   id: cpr
-      #   if: steps.ml.outputs.has_updated_sources == 1 && (env.APPLY_FIXES_EVENT == 'all' || env.APPLY_FIXES_EVENT == github.event_name) && env.APPLY_FIXES_MODE == 'pull_request' && (github.event_name == 'push' || github.event.pull_request.head.repo.full_name == github.repository) && inputs.MLEnabled
-      #   uses: peter-evans/create-pull-request@v4.1.3
-      #   with:
-      #     token: ${{ secrets.token || secrets.GITHUB_TOKEN }}
-      #     commit-message: "[MegaLinter] Apply linters automatic fixes"
-      #     title: "[MegaLinter] Apply linters automatic fixes"
-      #     labels: bot
-      #     base: ${{ github.head_ref }}
-  
-      # - name: Create PR output
-      #   if: steps.ml.outputs.has_updated_sources == 1 && (env.APPLY_FIXES_EVENT == 'all' || env.APPLY_FIXES_EVENT == github.event_name) && env.APPLY_FIXES_MODE == 'pull_request' && (github.event_name == 'push' || github.event.pull_request.head.repo.full_name == github.repository) && inputs.MLEnabled
-      #   run: |
-      #     echo "Pull Request Number - ${{ steps.cpr.outputs.pull-request-number }}"
-      #     echo "Pull Request URL - ${{ steps.cpr.outputs.pull-request-url }}"
+      - name: run composer install 
+        if: inputs.language == 'php' && inputs.ComposerVersion == "latest"
+        uses: docker://composer
+        with:
+          args: ${{ inputs.ComposerArgs }}
 
   build:
-    needs: 
+    needs: test
+    env:
+      GITHUB_TOKEN: ${{ secrets.token }}
     steps:
       - name: Set up Docker Context for Buildx
         id: buildx-context
