--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,13 +36,13 @@ jobs:
         uses: actions/checkout@v3.0.2
 
       - name: run composer 
-        if: ${{ inputs.language == 'php' && inputs.ComposerVersion == "2.2" }}
+        if: ${{ inputs.language == 'php' && inputs.ComposerVersion == '2.2' }}
         uses: docker://composer:2.2
         with:
           args: ${{ inputs.ComposerArgs }}
 
       - name: run composer install 
-        if: ${{ inputs.language == 'php' && inputs.ComposerVersion == "latest"}}
+        if: ${{ inputs.language == 'php' && inputs.ComposerVersion == 'latest'}}
         uses: docker://composer
         with:
           args: ${{ inputs.ComposerArgs }}
