--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -53,6 +53,23 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.token }}
     steps:
+      - name: GenerateTAG
+        id: generatetag
+        run: |
+          echo "GITHUB_REF - $GITHUB_REF"
+          echo "GITHUB_SHA - $GITHUB_SHA"
+          echo "GITHUB_REPOSITORY - $GITHUB_REPOSITORY"
+          app=$(echo "$GITHUB_REPOSITORY" | cut -f 2 -d "/")
+          pull_number=$(jq -r .pull_request.number "$GITHUB_EVENT_PATH")
+          echo "app=$app" >> "$GITHUB_ENV"
+          if [ "$GITHUB_REF" = "refs/heads/master" ]; then
+            echo "tag=production-$GITHUB_SHA" >> "$GITHUB_ENV"
+            tag=production-"$GITHUB_SHA"
+          else
+            echo "tag=pr-$pull_number-$GITHUB_SHA" >> "$GITHUB_ENV"
+            tag=pr-"$pull_number-$GITHUB_SHA"
+          fi
+          echo "fulltag=${{secrets.docker-reg}}/$app:$tag">>"$GITHUB_ENV"
       - name: Set up Docker Context for Buildx
         id: buildx-context
         run: |
