--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -34,6 +34,8 @@ jobs:
       DO_E2E_TESTS: ${{ contains(github.event.head_commit.message, '/e2e') }}
     steps:
       - name: how meny already paid minutes we have on github action runners?
+        env:
+          GH_TOKEN: ${{ secrets.token }}
         run: | 
           gh api -H "Accept: application/vnd.github+json" /orgs/easir/settings/billing/actions        
       - name: prod or not?
