--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -10,6 +10,11 @@ on:
         required: false
         default: "latest"
         type: string
+      ForceSelfHosted:
+        required: false
+        type: boolean
+        default: false
+
 
     secrets:
       token:
@@ -28,8 +33,9 @@ on:
   
 jobs:
   setup_variables:
+    timeout-minutes: 5
     outputs:
-      output1: ${{ steps.runners.outputs.runners }}
+      runners: ${{ steps.runners.outputs.runners }}
       output2: ${{ steps.environment.outputs.environment }}
       output3: ${{ steps.imagetag.outputs.imagetag }}
     runs-on: ubuntu-latest
@@ -39,13 +45,16 @@ jobs:
       FORCE_PUSH: ${{ contains(github.event.head_commit.message, '/forcepush') }}
       DO_E2E_TESTS: ${{ contains(github.event.head_commit.message, '/e2e') }}
     steps:
-      # # THIS DOES NOT FULLY WORK WITHOUT SOME PERMISSIONS !
+      - name: forced selfhosted runners
+        if: ${{ inputs.ForceSelfHosted }}
+        run: echo "runners=self-hosted" >> $GITHUB_OUTPUT
+
       - name: how meny already paid minutes we have on github action runners?
         id: runners
+        if: !Not ${{ inputs.ForceSelfHosted }}
         run: | 
-          env
           minutes=`gh api -H "Accept: application/vnd.github+json" /orgs/easir/settings/billing/actions | jq ".total_minutes_used"`
-          if (( $minutes < 3000 ))
+          if (( $minutes < 2900 ))
           then 
           export runners="ubuntu-latest"
           else
@@ -65,13 +74,14 @@ jobs:
             export environment=dev
           fi
           echo "environment=$environment" >> $GITHUB_OUTPUT
+
       - name: GenerateTAG
         id: imagetag
         run: |
           app=$(echo "$GITHUB_REPOSITORY" | cut -f 2 -d "/")
           pull_number=$(jq -r .pull_request.number "$GITHUB_EVENT_PATH")
           echo "app=$app" >> "$GITHUB_ENV"
-          if [ "$GITHUB_REF" = "refs/heads/master" ]; then
+          if [ ${{ steps.environment.outputs.environment }} = "prod"]; then
             echo "tag=production-$GITHUB_SHA" >> "$GITHUB_ENV"
             tag=production-"$GITHUB_SHA"
           else
@@ -81,38 +91,40 @@ jobs:
           echo "imagetag=$app:$tag" >> $GITHUB_OUTPUT
 
           cat $GITHUB_OUTPUT
-      # - name: get envs 1Password
-      #   uses: mcmarkj/1password-actions@v2.0.3
 
-  use-variables:
-    runs-on: ${{needs.setup_variables.outputs.output1}}
-    needs: setup_variables
-    steps:
-      - name: test
-        run: |
-          echo ${{needs.setup_variables.outputs.output1}} ${{needs.setup_variables.outputs.output2}}  ${{needs.setup_variables.outputs.output3}}  
-  # test:
-  #   env:
-  #     GITHUB_TOKEN: ${{ secrets.token }}
-  #   runs-on: ["self-hosted"]
-  #   timeout-minutes: 15
-  #   container: 
-  #     image: composer
+
+  # use-variables:
+  #   runs-on: ${{needs.setup_variables.outputs.runners}}
+  #   needs: setup_variables
+  #   timeout-minutes: 20
   #   steps:
-  #     - name: pull code
-  #       uses: actions/checkout@v3
-  #     - name: run tests
+  #     - name: test
   #       run: |
-  #         composer install  --prefer-dist --ignore-platform-reqs --no-ansi --no-progress --no-interaction
-  #     - name: phpcs
-  #       run: |
-  #         php ./vendor/bin/phpcs ./src/
-  #     - name: phplint
-  #       run: |
-  #         find . -name '*.php' -not -path './vendor/*' -print0 | xargs -0 php -l
-  #     - name: phpunit
-  #       run: |
-  #         php ./vendor/bin/phpunit
+  #         echo ${{needs.setup_variables.outputs.runners}} ${{needs.setup_variables.outputs.output2}}  ${{needs.setup_variables.outputs.output3}}  
+      
+  test:
+    needs: setup_variables
+    env: 
+      GITHUB_TOKEN: ${{ secrets.token }}
+    runs-on: ${{needs.setup_variables.outputs.runners}}
+    timeout-minutes: 15
+    container: 
+      image: composer
+    steps:
+      - name: pull code
+        uses: actions/checkout@v3
+      - name: run tests
+        run: |
+          composer install  --prefer-dist --ignore-platform-reqs --no-ansi --no-progress --no-interaction
+      - name: phpcs
+        run: |
+          php ./vendor/bin/phpcs ./src/
+      - name: phplint
+        run: |
+          find . -name '*.php' -not -path './vendor/*' -print0 | xargs -0 php -l
+      - name: phpunit
+        run: |
+          php ./vendor/bin/phpunit
 
 
   # build:
