--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -14,6 +14,11 @@ on:
         required: false
         type: boolean
         default: false
+      phpcsWorkdir:
+        required: false
+        type: string
+        default: "./src/"
+
 
 
     secrets:
@@ -119,7 +124,7 @@ jobs:
           composer install  --prefer-dist --ignore-platform-reqs --no-ansi --no-progress --no-interaction
       - name: phpcs
         run: |
-          php ./vendor/bin/phpcs ./src/
+          php ./vendor/bin/phpcs ${{ inputs.phpcs-workdir }}
       - name: phplint
         run: |
           find . -name '*.php' -not -path './vendor/*' -print0 | xargs -0 php -l
