--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -168,21 +168,21 @@ jobs:
       GITHUB_TOKEN: ${{ secrets.token }}
     runs-on: ${{needs.setup_variables.outputs.runners}}
     steps:    
-      - name: Import secrets for DEV
-        if: ${{ steps.environment.outputs.environment }} = "dev"
-        uses: mcmarkj/1password-actions@v2
-        id: screts-dev
-        with:
-          connect-server-url: ${{ secrets.TEST_OP_CONNECT_HOST }}
-          connect-server-token: ${{ secrets.TEST_OP_CONNECT_TOKEN }}
+      # - name: Import secrets for DEV
+      #   if: ${{ steps.environment.outputs.environment }} = "dev"
+      #   uses: mcmarkj/1password-actions@v2
+      #   id: screts-dev
+      #   with:
+      #     connect-server-url: ${{ secrets.TEST_OP_CONNECT_HOST }}
+      #     connect-server-token: ${{ secrets.TEST_OP_CONNECT_TOKEN }}
 
-      - name: Import secrets for Prod
-        if: ${{ steps.environment.outputs.environment }} = "prod"
-        uses: mcmarkj/1password-actions@v2
-        id: screts-prod
-        with:
-          connect-server-url: ${{ secrets.TEST_OP_CONNECT_HOST }}
-          connect-server-token: ${{ secrets.TEST_OP_CONNECT_TOKEN }}
+      # - name: Import secrets for Prod
+      #   if: ${{ steps.environment.outputs.environment }} = "prod"
+      #   uses: mcmarkj/1password-actions@v2
+      #   id: screts-prod
+      #   with:
+      #     connect-server-url: ${{ secrets.TEST_OP_CONNECT_HOST }}
+      #     connect-server-token: ${{ secrets.TEST_OP_CONNECT_TOKEN }}
 
 
   # build:
@@ -192,46 +192,46 @@ jobs:
   #     GITHUB_TOKEN: ${{ secrets.token }}
   #   steps:
 
-  #     - name: Set up Docker Context for Buildx
-  #       id: buildx-context
-  #       run: |
-  #         docker context create builders
+      - name: Set up Docker Context for Buildx
+        id: buildx-context
+        run: |
+          docker context create builders
 
-  #     - name: Docker Setup Buildx
-  #       uses: docker/setup-buildx-action@v2.0.0
-  #       with:
-  #         version: latest
-  #         endpoint: builders
+      - name: Docker Setup Buildx
+        uses: docker/setup-buildx-action@v2.0.0
+        with:
+          version: latest
+          endpoint: builders
       
-  #     - name: Docker meta
-  #       id: meta
-  #       uses: docker/metadata-action@v4
-  #       with:
-  #         images: |
-  #           ${{ secrets.docker-reg }}/${{ env.app }}
-  #         tags: |
-  #           type=schedule
-  #           type=ref,event=branch
-  #           type=ref,event=pr
-  #           type=semver,pattern={{version}}
-  #           type=semver,pattern={{major}}.{{minor}}
-  #           type=semver,pattern={{major}}
-  #           type=raw,value=${{ env.tag }}
-  #           type=ref,event=tag
-  #           type=sha,enable=true,priority=100,prefix=,suffix=,format=long
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: |
+            ${{ secrets.docker-reg }}/${{ env.app }}
+          tags: |
+            type=schedule
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+            type=ref,event=tag
+            type=sha,enable=true,priority=100,prefix=,suffix=,format=long
+            type=raw,value=${{needs.setup_variables.outputs.runners}}
+            
+      - name: Docker Login
+        uses: docker/login-action@v2.0.0
+        with:
+          registry: ${{ secrets.docker-reg }}
+          username: ${{ secrets.docker-login }}
+          password: ${{ secrets.docker-pass }} 
+          ecr: false
 
-  #     - name: Docker Login
-  #       uses: docker/login-action@v2.0.0
-  #       with:
-  #         registry: ${{ secrets.docker-reg }}
-  #         username: ${{ secrets.docker-login }}
-  #         password: ${{ secrets.docker-pass }} 
-  #         ecr: false
-
-  #     - name: Build and push Docker images
-  #       uses: docker/build-push-action@v3.1.1
-  #       with:
-  #         allow: network.host
-  #         network: host
-  #         push: true
-  #         tags: ${{ steps.meta.outputs.tags }}
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v3.1.1
+        with:
+          allow: network.host
+          network: host
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
