--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -47,6 +47,7 @@ jobs:
       runners: ${{ steps.runners.outputs.runners }}
       environment: ${{ steps.environment.outputs.environment }}
       imagetag: ${{ steps.imagetag.outputs.imagetag }}
+      app: ${{ steps.imagetag.outputs.app }}
       rebuildManifest: ${{ steps.did-manifest-change.outputs.any_changed }}
     runs-on: ubuntu-latest
     env:
@@ -103,6 +104,7 @@ jobs:
             tag=pr-"$pull_number-$GITHUB_SHA"
           fi
           echo "imagetag=$app:$tag" >> $GITHUB_OUTPUT
+          echo "app=$app" >> $GITHUB_OUTPUT
 
       - name: did manifest change?
         id: did-manifest-change
@@ -156,10 +158,10 @@ jobs:
           password: ${{secrets.docker-pass}}
     steps:
       - name: pull code
-        uses: actions/checkout@v3
+        uses: actions/checkout
       - name: generate manifest
         run: |
-          manifest chart generate && helmpush chart "${{secrets.CHART_REPOSITORY_URL}}" --version "0.0.0-${{github.sha}}"
+          manifest chart generate && helmpush chart "${{secrets.docker-reg}}" --version "0.0.0-${{github.sha}}"
 
   build-image:
     timeout-minutes: 15
@@ -198,14 +200,14 @@ jobs:
           docker context create builders
 
       - name: Docker Setup Buildx
-        uses: docker/setup-buildx-action@v2.0.0
+        uses: docker/setup-buildx-action
         with:
           version: latest
           endpoint: builders
       
       - name: Docker meta
         id: meta
-        uses: docker/metadata-action@v4
+        uses: docker/metadata-action
         with:
           images: |
             ${{ secrets.docker-reg }}/${{ env.app }}
@@ -221,7 +223,7 @@ jobs:
             type=raw,value=${{needs.setup_variables.outputs.runners}}
 
       - name: Docker Login
-        uses: docker/login-action@v2.0.0
+        uses: docker/login-action
         with:
           registry: ${{ secrets.docker-reg }}
           username: ${{ secrets.docker-login }}
@@ -229,7 +231,7 @@ jobs:
           ecr: false
 
       - name: Build and push Docker images
-        uses: docker/build-push-action@v3.1.1
+        uses: docker/build-push-action
         with:
           allow: network.host
           network: host
