--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -158,7 +158,7 @@ jobs:
           password: ${{secrets.docker-pass}}
     steps:
       - name: pull code
-        uses: actions/checkout
+        uses: actions/checkout@latest
       - name: generate manifest
         run: |
           manifest chart generate && helmpush chart "${{secrets.docker-reg}}" --version "0.0.0-${{github.sha}}"
@@ -200,17 +200,17 @@ jobs:
           docker context create builders
 
       - name: Docker Setup Buildx
-        uses: docker/setup-buildx-action
+        uses: docker/setup-buildx-action@latest
         with:
           version: latest
           endpoint: builders
       
       - name: Docker meta
         id: meta
-        uses: docker/metadata-action
+        uses: docker/metadata-action@latest
         with:
           images: |
-            ${{ secrets.docker-reg }}/${{ env.app }}
+            ${{ secrets.docker-reg }}/${{needs.setup_variables.outputs.app}}
           tags: |
             type=schedule
             type=ref,event=branch
@@ -223,7 +223,7 @@ jobs:
             type=raw,value=${{needs.setup_variables.outputs.runners}}
 
       - name: Docker Login
-        uses: docker/login-action
+        uses: docker/login-action@latest
         with:
           registry: ${{ secrets.docker-reg }}
           username: ${{ secrets.docker-login }}
@@ -231,7 +231,7 @@ jobs:
           ecr: false
 
       - name: Build and push Docker images
-        uses: docker/build-push-action
+        uses: docker/build-push-action@latest
         with:
           allow: network.host
           network: host
