--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -158,7 +158,7 @@ jobs:
           password: ${{secrets.docker-pass}}
     steps:
       - name: pull code
-        uses: actions/checkout@latest
+        uses: actions/checkout@v3
       - name: generate manifest
         run: |
           manifest chart generate && helmpush chart "${{secrets.docker-reg}}" --version "0.0.0-${{github.sha}}"
@@ -200,14 +200,14 @@ jobs:
           docker context create builders
 
       - name: Docker Setup Buildx
-        uses: docker/setup-buildx-action@latest
+        uses: docker/setup-buildx-action@v2.2.1
         with:
           version: latest
           endpoint: builders
       
       - name: Docker meta
         id: meta
-        uses: docker/metadata-action@latest
+        uses: docker/metadata-action@v4.1.1
         with:
           images: |
             ${{ secrets.docker-reg }}/${{needs.setup_variables.outputs.app}}
@@ -223,7 +223,7 @@ jobs:
             type=raw,value=${{needs.setup_variables.outputs.runners}}
 
       - name: Docker Login
-        uses: docker/login-action@latest
+        uses: docker/login-action@v2.1.0
         with:
           registry: ${{ secrets.docker-reg }}
           username: ${{ secrets.docker-login }}
@@ -231,7 +231,7 @@ jobs:
           ecr: false
 
       - name: Build and push Docker images
-        uses: docker/build-push-action@latest
+        uses: docker/build-push-action@v3.2.0
         with:
           allow: network.host
           network: host
