--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -150,7 +150,7 @@ jobs:
   manifest-generate:
     timeout-minutes: 5
     needs: setup_variables
-    runs-on: ${{needs.setup_variables.outputs.runners}}
+    runs-on: self-hosted #${{needs.setup_variables.outputs.runners}}
     container: 
       image: docker-registry.easir.com/manifest:master-edc5d03a8b7a4530442e23d2bd87c0833b4bd0bd
       credentials:
