--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -220,7 +220,7 @@ jobs:
             type=semver,pattern={{major}}
             type=ref,event=tag
             type=sha,enable=true,priority=100,prefix=,suffix=,format=long
-            type=raw,value=${{needs.setup_variables.outputs.runners}}
+            type=raw,value=${{needs.setup_variables.outputs.imagetag}}
 
       - name: Docker Login
         uses: docker/login-action@v2.1.0
