--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -36,6 +36,8 @@ on:
         required: true
       numa-numa-token:
         required: true
+      chartmuseum-url:
+        required: true
   workflow_dispatch:
     
 
@@ -159,6 +161,7 @@ jobs:
     steps:
       - name: pull code
         uses: actions/checkout@v3
+        
       - name: generate manifest
         run: |
           manifest chart generate && helmpush chart "${{secrets.docker-reg}}" --version "0.0.0-${{github.sha}}"
