--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -153,6 +153,7 @@ jobs:
     timeout-minutes: 5
     needs: setup_variables
     runs-on: ${{needs.setup_variables.outputs.runners}}
+    if: ${{ needs.setup_variables.outputs.rebuildManifest }}
     container: 
       image: docker-registry.easir.com/manifest:master-edc5d03a8b7a4530442e23d2bd87c0833b4bd0bd
       credentials:
