some cleanup and prevent hostchecking

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -132,6 +132,7 @@ jobs:
       
       - name: prevent host key verification error
         run: |
+          mkdir ~/.ssh/
           ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
 
       - name: run tests
