composer githug authorisation

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -133,6 +133,7 @@ jobs:
 
       - name: run tests
         run: |
+          env
           composer install  --prefer-dist --ignore-platform-reqs --no-ansi --no-progress --no-interaction
 
       - name: phpcs
