--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -137,6 +137,9 @@ jobs:
           mkdir ~/.ssh/
           echo '${{secrets.gh-ssh-key}}' > ~/.ssh/id_rsa
           ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
+          #wtf is this shit?!
+          ddev auth ssh
+          ddev ssh
           composer install  --prefer-dist --ignore-platform-reqs --no-ansi --no-progress --no-interaction
 
       - name: phpcs
