--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -138,6 +138,8 @@ jobs:
           echo '${{secrets.gh-ssh-key}}' > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
+          ls -al ~/.ssh/
+          
           composer install  --prefer-dist --ignore-platform-reqs --no-ansi --no-progress --no-interaction
 
       - name: phpcs
