--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -139,7 +139,8 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
           ls -al ~/.ssh/
-          
+          whoami
+          pwd
           composer install  --prefer-dist --ignore-platform-reqs --no-ansi --no-progress --no-interaction
 
       - name: phpcs
